--- a/assets/sass/molecules/ml-navigation.scss
+++ b/assets/sass/molecules/ml-navigation.scss
@@ -32,7 +32,7 @@
 }
 .mobile-search-visible {
   position: fixed;
-  z-index: 10;
+  z-index: 100;
   transform: translateY(0);
 }
 
